UFHT Release v 1.6/src/objects/Feature_Installation_Master__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to keep a track of all the features installed</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments by the user (if any)</description>
        <inlineHelpText>Comments by the user (if any)</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Installed_By__c</fullName>
        <description>Salesforce.com ID of the user who installed the feature</description>
        <inlineHelpText>Salesforce.com ID of the user who installed the feature</inlineHelpText>
        <label>Feature Installed By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date_Time__c</fullName>
        <description>Timestamp when the application was installed</description>
        <inlineHelpText>Timestamp when the application was installed</inlineHelpText>
        <label>Installation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the feature is activated for this customer or not</description>
        <inlineHelpText>Designates whether the feature is activated for this customer or not</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Days_Remaining__c</fullName>
        <description>Number of days for which the license for this installation will be valid</description>
        <inlineHelpText>Number of days for which the license for this installation will be valid</inlineHelpText>
        <label>License Days Remaining</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <description>Date on which the license for this installation expires</description>
        <inlineHelpText>Date on which the license for this installation expires</inlineHelpText>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Record_ID__c</fullName>
        <description>License record ID for the customer&apos;s license record in the LMA org</description>
        <inlineHelpText>License record ID for the customer&apos;s license record in the LMA org</inlineHelpText>
        <label>License Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Never_Expires__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the license for this application expires or not</description>
        <inlineHelpText>Denotes whether the license for this application expires or not</inlineHelpText>
        <label>Never Expires?</label>
        <type>Checkbox</type>
    </fields>
    <label>Feature Installation Master</label>
</CustomObject>